<resources>
    <string name="app_name">RoboApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="ok">OK</string>
    <string name="camera">Camera</string>
    <string name="default_multicast_address">224.0.0.1</string>
    <string name="use_stream_height">use stream height</string>
    <string name="use_stream_width">use stream width</string>
    <string name="dont_set">don\'t set</string>
    <string name="error_no_address">You must enter an address.</string>
    <string name="error_bad_multicast_address">The multicast address must be between 224.0.0.0 and 239.0.0.0</string>
    <string name="error_no_port">You must enter a port number.</string>
    <string name="error_bad_width">The width must be a positive number or empty.</string>
    <string name="error_bad_bps">The bits per second must be a positive number or empty.</string>
    <string name="error_bad_fps">The frames per second must be a positive number or empty.</string>
    <string name="error_bad_height">The height must be a positive number or empty.</string>
    <string name="error_bad_port" formatted="false">The port number must be between %d and %d.</string>
    <string name="warning_multicast_address">The multicast address should be between 239.0.0.0 and 239.255.255.255.</string>
    <string name="error_bad_address">The address is not a valid URL.</string>
    <string name="connection_type">Connection Type</string>
    <string-array name="connection_types">
        <item>@string/tcp_ip</item>
        <item>@string/http</item>
        <item>@string/multicast</item>
    </string-array>
    <string name="tcp_ip">TCP/IP</string>
    <string name="http">HTTP</string>
    <string name="multicast">Multicast</string>
    <string name="address">Address</string>
    <string name="port">Port</string>
    <string name="use_default_hint">use default</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="frames_per_second">Frames per second</string>
    <string name="bits_per_second">Bits per second</string>
    <string name="settings_settings">settings</string>
    <string name="settings_cameras">cameras</string>
    <string name="initializing_video">Initializing video...</string>
    <string name="image_saved">Image saved.</string>
    <string name="error_lost_connection">Lost the connection to the camera.</string>
    <string name="error_couldnt_connect">Couldn\'t connect to the camera.</string>
    <string name="about_contact">about/contact</string>
    <string name="live_camera">Live Camera</string>
    <string name="patrol_setup">Patrol Setup</string>
    <string name="photos_from_patrol">Photos from patrol</string>
    <string name="clear_selection">Clear Selection</string>
    <string name="get_map">Get Map</string>
    <string name="save">Save Selection</string>
    <string name="start_patrol_at">Start Patrol At:</string>
    <string name="start_partol">Start Partol</string>
    <string name="forward">Forward</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="login">login</string>
    <string name="ip">Ip:</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="admin">admin</string>
    <string name="admin_hint">admin</string>
    <string name="about">This is a companion App, to be used with the TON-E robot.\n\nCreated as part of a Computer Engineering thesis project for Ruppin College.\n\n\nContact us:\n\nBar Sahar bsahar1990@gmail.com\n\nAvi Hazan avihazan22@gmail.com</string>
</resources>
